# swarmauri-sdk

./: .gitignore  .peagen.toml  .pymon  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PYPI.md  README.md  STYLE_GUIDE.md  TIGRBL_PHASE0_BASELINE_REPORT.md  TIGRBL_REFACTOR_PHASE_PLAN.md  add_swarmauri_path.sh  contributing.md  docker-compose.yml  evs.yaml  fetch_llms.py  list_models.py  mypy.ini  package-lock.json  proof.tsv  pytest.ini  setup.py  test.py  vec_dist_similarity.yaml
docs/: .dockerignore  Dockerfile  Dockerfile.mkdocs  LLM_PROVIDER_MODEL_PRICING_LINKS.md  README.md  api_manifest.yaml  docker-compose.yaml  docker-compose.yml  docstring_tasks.md  mdocks.insiders.yaml  missing_docstrings.md  mkdocs.yml  provenance.md  pyproject.toml  swarmauri_product_portfolio_website_brief.md
docs/.cache/: api_index.json
docs/api/additional/: index.md
docs/api/additional/ensembles/: ensemble_base.md
docs/api/additional/factories/: factory_base.md  index.md
docs/docs/: index.md  provenance.md
docs/docs/concept/: auto_authn_overview.md  auto_authn_v2_overview.md  distances.md  evaluator_pools.md  index.md
docs/docs/guide/: evolve.md  faq.md  gateway-systemd.md  index.md  installation.md  operations.md  peagen_remote_workflow.md  usage.md
docs/docs/home/: concepts.md  contribute.md  help.md  index.md  installation.md  why_use_swarmauri.md
docs/docs/news/: .authors.yml
docs/docs/posts/: hello-world.md
docs/examples/: http_transport_ip_trust_demo.py
docs/infra/: docker-compose.yml
docs/scripts/: gen_api.py  generate_content.py  install_packages.py
docs/swarmauri-sdk/docs/: index.md
(+14356 files in other folders)
