[project]
name = "zdx"
version = "0.1.0"
description = "Swarmauri Documentation"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Jacob Stewart", email = "jacob@swarmauri.com" }]
dependencies = [
    "mkdocs-material>=9.6.4,<10.0.0",
    "mkdocstrings[python]>=0.28.1,<0.29.0",
    "mkdocs-autorefs",
    "griffe-typingdoc",
    "pyyaml>=6.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly select files so hatch can build a wheel
only-include = [
  "docs",
  "mkdocs.yml",
  "api_manifest.yaml",
  "scripts",
]
